removed bear market promo, changed awning filter icon

--- a/awnings.html
+++ b/awnings.html
@@ -338,7 +338,7 @@
         </ul>
       </div>
       <div class="card-2 card__data card__secondary flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_fan.svg" alt="Fan Icon">
+        <img class="icon--md" src="images/icons/icon_awning-filter.svg" alt="MERV-8 Filters Icon">
         <h6>Filter System</h6>
         <h6 class="text--blue">MERV-8</h6>
       </div>
