--- a/m300.html
+++ b/m300.html
@@ -663,9 +663,9 @@
               <div class="card__data card-9 pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon" />
                 <h6 class="pricing__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue text--strikethrough">$39,999 - $45,500</h6>
+                <h6 class="text--blue">$39,999 - $45,500</h6>
               </div>
-              <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
+              <!-- <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$29,997</h6>
@@ -676,7 +676,7 @@
                 <div class="card__data card__data--pricing-popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="pricing__set pricing__set-3 gap--lg ai-end jc-c">
@@ -697,9 +697,9 @@
               <div class="card__data card-9 pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon" />
                 <h6 class="pricing__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue text--strikethrough">$113,997 - $130,500</h6>
+                <h6 class="text--blue">$113,997 - $130,500</h6>
               </div>
-              <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
+              <!-- <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$86,997</h6>
@@ -710,7 +710,7 @@
                 <div class="card__data card__data--pricing-popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="pricing__set pricing__set-4 gap--lg ai-end jc-c">
@@ -731,9 +731,9 @@
               <div class="card__data card-9 pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon" />
                 <h6 class="pricing__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue text--strikethrough">$167,500 - 190,899</h6>
+                <h6 class="text--blue">$167,500 - 190,899</h6>
               </div>
-              <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
+              <!-- <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$139,997</h6>
@@ -744,7 +744,7 @@
                 <div class="card__data card__data--pricing-popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="pricing__set pricing__set-6 gap--lg ai-end jc-c">
@@ -765,9 +765,9 @@
               <div class="card__data card-9 pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon" />
                 <h6 class="pricing__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue text--strikethrough">$250,500 - 291,999</h6>
+                <h6 class="text--blue">$250,500 - 291,999</h6>
               </div>
-              <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
+              <!-- <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon"
                   href="contact" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
@@ -779,7 +779,7 @@
                 <div class="card__data card__data--pricing-popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="pricing__set pricing__set-8 gap--lg ai-end jc-c">
@@ -800,9 +800,9 @@
               <div class="card__data card-9 pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon" />
                 <h6 class="pricing__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue text--strikethrough">$310,500 - 356,999</h6>
+                <h6 class="text--blue">$310,500 - 356,999</h6>
               </div>
-              <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
+              <!-- <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$233,997</h6>
@@ -813,7 +813,7 @@
                 <div class="card__data card__data--pricing-popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="pricing__set pricing__set-10 gap--lg ai-end jc-c">
@@ -834,9 +834,9 @@
               <div class="card__data card-9 pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon" />
                 <h6 class="pricing__set-heading">Approx. Cost</h6>
-                <h6 class="text--blue text--strikethrough">$386,500 - 448,999</h6>
+                <h6 class="text--blue">$386,500 - 448,999</h6>
               </div>
-              <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
+              <!-- <div data-pricing="true" class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$274,997</h6>
@@ -847,7 +847,7 @@
                 <div class="card__data card__data--pricing-popup">
                   <h6>Further discounts on high volume pricing</h6>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
