changed nomenclature for gap spacing

--- a/index.html
+++ b/index.html
@@ -427,6 +427,23 @@
       </svg>
     </a>
 
+    <section class="companies container">
+      <div class="flex gap--lg">
+        <img class="companies__logos" src="images/press-logos/benzinga.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/big-dawg-crypto-podcast.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/bitcoin-magazine.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/bitscoins.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/blockchain-bytes-daily.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/blockster.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/cision-prn.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/Coinscreed.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/cryptonews.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/easydailycrypto.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/ico-holder.png" alt="Benzinga Logo">
+        <img class="companies__logos" src="images/press-logos/investors-observer.png" alt="Benzinga Logo">
+      </div>
+    </section>
+
     <section id="bundle" class="bundle container">
       <div class="flex ai-c gap--md">
         <img id="bundle__logo" class="icon--lg icon--full-height" src="images/icons/icon_logo.svg" alt="Logo Icon">
@@ -823,7 +840,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xl">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
@@ -855,11 +872,12 @@
       <div class="footer__divider"></div>
       <div class="flex flex-col--lg-tablet jc-sb gap--sm">
         <div class="flex flex-col--lg-tablet gap--sm">
-          <small class="footer__copyright">© <span class="footer__copyright-year">2023</span> Digital Shovel Holdings Inc.</small>
+          <small class="footer__copyright">© <span class="footer__copyright-year">2023</span> Digital Shovel Holdings
+            Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
           <a target="_blank" href="https://www.youtube.com/@digital_shovel"><img class="footer__social"
-            src="images/icons/icon_youtube.svg" alt="YouTube Logo Icon"></a>
+              src="images/icons/icon_youtube.svg" alt="YouTube Logo Icon"></a>
           <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
               src="images/icons/icon_instagram.svg" alt="Instagram Logo Icon"></a>
           <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
