--- a/m300.html
+++ b/m300.html
@@ -644,7 +644,7 @@
         <h2 class="text__heading">Configurations & <span class="text--blue">Pricing</span></h2>
         <p class="text__body text--center">Our modular design allows Minipods to be customized into a set of units and
           addons that fit your needs best.</p>
-        <div class="flex flex-col gap--xlg mtop--2xl">
+        <div class="flex flex-col gap--xl mtop--2xl">
           <div class="pricing__set pricing__set-1 gap--lg ai-end jc-c">
             <img class="pricing__set-img" src="images/illustrations/minipod-1unit.svg"
               alt="Minipod Single Unit Illustration" />
@@ -866,7 +866,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xl">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
