--- a/pages/archived/faq.html
+++ b/pages/archived/faq.html
@@ -136,7 +136,7 @@
           <li class="faq__sidebar-list-item">Billing</li>
         </ul>
       </article>
-      <article class="faq__content flex flex-col gap--xlg">
+      <article class="faq__content flex flex-col gap--xl">
 
         <article class="faq__article flex flex-col gap--md">
           <p class="faq__title">General</p>
@@ -245,7 +245,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xl">
         <div class="footer__column">
           <a href="home"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
