--- a/recruitment.html
+++ b/recruitment.html
@@ -288,7 +288,7 @@
     </section>
 
     <!-- Why Join Us -->
-    <section class="perks flex flex-col gap--xlg">
+    <section class="perks flex flex-col gap--xl">
       <h1 class="section__heading">Why Join Us</h1>
 
       <div class="perks__icons flex flex-col ai-c jc-c gap--lg">
@@ -362,7 +362,7 @@
     </section>
 
     <!-- Hybrid Schedule -->
-    <section class="flex flex-col gap--xlg">
+    <section class="flex flex-col gap--xl">
       <div class="flex flex-col gap--md">
         <h1 class="section__heading">Hybrid Schedule</h1>
       </div>
@@ -584,7 +584,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xl">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
