--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -224,7 +224,7 @@
 
   <main class="main turnkey container">
 
-    <section class="flex flex-col gap--xlg">
+    <section class="flex flex-col gap--xl">
       <div class="flex flex-col gap--sm">
         <h1 class="hero__heading hero__heading--left">Turn-Key Solutions</h1>
         <p class="hero__body">Our turn-key solutions are designed to make your life easier by providing a
@@ -285,7 +285,7 @@
       </div>
     </section>
 
-    <section class="turnkey__pricing flex flex-col--lg-tablet jc-sb ai-c gap--xlg">
+    <section class="turnkey__pricing flex flex-col--lg-tablet jc-sb ai-c gap--xl">
       <div class="flex flex-col">
         <h5>Power Deposit</h5>
         <h2 class="flex ai-end gap--sm">$42k
@@ -319,7 +319,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xl">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
