--- a/voskcoin.html
+++ b/voskcoin.html
@@ -226,7 +226,7 @@
       <img src="images/illustrations/ds-X-vosk.svg" alt="Partnership Digital Shovel X VoskCoin" />
     </section>
 
-    <section class="promotion flex flex-col--lg-tablet jc-sb gap--xxlg">
+    <section class="promotion flex flex-col--lg-tablet jc-sb gap--2xl">
       <div class="card__youtube">
         <div class="flex flex-col gap--sm">
           <a class="card__youtube--link flex ai-c gap--sm" target="_blank" href="https://www.youtube.com/@voskcoin">
@@ -566,7 +566,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xl">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
