--- a/spdu.html
+++ b/spdu.html
@@ -244,7 +244,7 @@
   </nav>
 
   <main class="main">
-    <section id="product" class="container container--i300 flex flex-col ai-c gap--xlg">
+    <section id="product" class="container container--i300 flex flex-col ai-c gap--xl">
       <div class="flex flex-col ai-c gap--sm">
         <div class="flex flex-col--sm-mobile ai-c gap--sm">
           <h4>Power Distribution System</h4>
@@ -388,7 +388,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col--lg-tablet jc-sb gap--xlg">
+      <div class="flex flex-col--lg-tablet jc-sb gap--xl">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
