--- a/m300.html
+++ b/m300.html
@@ -22,7 +22,7 @@
   <meta name="twitter:image:alt" content="Digital Shovel Logo" />
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=2.1" />
+  <link rel="stylesheet" href="../dist/style.min.css?v=2.2" />
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
@@ -201,7 +201,7 @@
                   <small>Cooling Solution</small>
                 </div>
               </a> -->
-              <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+              <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -216,7 +216,7 @@
                   </h5>
                   <small>Automation & Monitoring</small>
                 </div>
-              </a>
+              </a> -->
             </div>
           </div>
         </li>
@@ -612,17 +612,17 @@
             stroke-linejoin="round" />
         </svg>
       </a>
-      <div data-specs="true" class="card-9 card__data card__data--deal flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
-        <h6 class="pricing__set-heading">Bear Market Promo</h6>
-        <h6 class="text--red text--emphasis text--larger">$29,997</h6>
-        <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+      <div data-specs="true" class="card-9 card__data flex ai-c gap--md">
+        <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon" />
+        <h6 class="pricing__set-heading">Approx. Cost</h6>
+        <h6 class="text--blue text--emphasis">$39,999 - $45,500</h6>
+        <!-- <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M2.5 1L7.95455 6L2.5 11" />
         </svg>
         <div class="card__data card__data--specs-popup">
           <h6>Further discounts on high volume pricing</h6>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -883,7 +883,7 @@
             <li><a href="nanopod" class="footer__list-item">NanoPOD</a></li>
             <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
             <!-- <li><a href="fans" class="footer__list-item">Cooling Fans</a></li> -->
-            <li><a href="spdu" class="footer__list-item">SmartPDU</a></li>
+            <!-- <li><a href="spdu" class="footer__list-item">SmartPDU</a></li> -->
           </ul>
         </div>
         <div class="footer__column">
