added global google tag

--- a/fans.html
+++ b/fans.html
@@ -49,6 +49,17 @@
 
   <title>Digital Shovel • Fans</title>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-810441893"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-810441893');
+  </script>
+
+
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
     (function (h, o, t, j, a, r) {
@@ -256,8 +267,7 @@
               alt="Inside View of the Fans">
             <img class="photo photo-3 photo__i300" src="images/photos/fans/fans-closed.png"
               alt="Fan with Closed Louvers">
-            <img class="photo photo-4 photo__i300" src="images/photos/fans/fans-open.png"
-              alt="Fans with Open Louvers">
+            <img class="photo photo-4 photo__i300" src="images/photos/fans/fans-open.png" alt="Fans with Open Louvers">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
