--- a/nanopod.html
+++ b/nanopod.html
@@ -50,6 +50,17 @@
 
   <title>Digital Shovel • NanoPOD</title>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-810441893"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-810441893');
+  </script>
+
+
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
     (function (h, o, t, j, a, r) {
@@ -254,8 +265,10 @@
           <div class="gallery gallery__i300">
             <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_back.png" alt="NanoPOD Back View">
             <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_side.png" alt="NanoPOD Side View">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_open-door.png" alt="NanoPOD Side View with Open Door">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_inside.png" alt="NanoPOD Inside View">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_open-door.png"
+              alt="NanoPOD Side View with Open Door">
+            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_inside.png"
+              alt="NanoPOD Inside View">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
