--- a/thanks-giveaway.html
+++ b/thanks-giveaway.html
@@ -43,6 +43,17 @@
 
   <title>Digital Shovel • Form Submitted</title>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-810441893"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-810441893');
+  </script>
+
+
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
     (function (h, o, t, j, a, r) {
@@ -224,7 +235,8 @@
         <div class="flex flex-col gap--sm ai-c--tablet">
           <h3>We have received your details!</h3>
           <p class="hero__body hero__body--team">
-            Show our team this message to receive your FREE Digital Shovel swag. We will contact you if you are the lucky winner of a FREE Digital Shovel SmartPDU!
+            Show our team this message to receive your FREE Digital Shovel swag. We will contact you if you are the
+            lucky winner of a FREE Digital Shovel SmartPDU!
           </p>
         </div>
       </div>
