--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -46,6 +46,17 @@
 
   <title>Digital Shovel • Turn-Key Solutions</title>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-810441893"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-810441893');
+  </script>
+
+
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
     (function (h, o, t, j, a, r) {
@@ -336,7 +347,7 @@
         </h2>
       </div>
     </section>
-    
+
     <section class="turnkey__cta flex flex-col ai-c">
       <a class="btn btn--primary" href="contact">Get Started
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
