--- a/awnings.html
+++ b/awnings.html
@@ -49,6 +49,17 @@
 
   <title>Digital Shovel • Awnings</title>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-810441893"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-810441893');
+  </script>
+
+
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
     (function (h, o, t, j, a, r) {
@@ -253,14 +264,22 @@
           <div class="gallery gallery__awnings">
             <img class="photo photo-1 photo__awning" src="images/photos/minipod/M300-side-2.jpg"
               alt="Awnings on the Minipod M300 Side View">
-            <img class="photo photo-2 photo__awning" src="images/photos/awnings/awning-1.png" alt="Single Awning Top View">
-            <img class="photo photo-3 photo__awning" src="images/photos/awnings/awning-2.png" alt="Awning Rack Side View">
-            <img class="photo photo-4 photo__awning" src="images/photos/awnings/awning-3.png" alt="Awning Rack Back View">
-            <img class="photo photo-5 photo__awning" src="images/photos/awnings/awning-4.png" alt="Single Awning Back View">
-            <img class="photo photo-6 photo__awning" src="images/photos/awnings/awning-9.png" alt="Double Awnings Packaged View">
-            <img class="photo photo-7 photo__awning" src="images/photos/awnings/awning-6.png" alt="Single Awning Top View">
-            <img class="photo photo-8 photo__awning" src="images/photos/awnings/awning-7.png" alt="Awnings on the Minipod M300 Side View">
-            <img class="photo photo-9 photo__awning" src="images/photos/awnings/awning-8.png" alt="Awnings on the Minipod M300 Side View">
+            <img class="photo photo-2 photo__awning" src="images/photos/awnings/awning-1.png"
+              alt="Single Awning Top View">
+            <img class="photo photo-3 photo__awning" src="images/photos/awnings/awning-2.png"
+              alt="Awning Rack Side View">
+            <img class="photo photo-4 photo__awning" src="images/photos/awnings/awning-3.png"
+              alt="Awning Rack Back View">
+            <img class="photo photo-5 photo__awning" src="images/photos/awnings/awning-4.png"
+              alt="Single Awning Back View">
+            <img class="photo photo-6 photo__awning" src="images/photos/awnings/awning-9.png"
+              alt="Double Awnings Packaged View">
+            <img class="photo photo-7 photo__awning" src="images/photos/awnings/awning-6.png"
+              alt="Single Awning Top View">
+            <img class="photo photo-8 photo__awning" src="images/photos/awnings/awning-7.png"
+              alt="Awnings on the Minipod M300 Side View">
+            <img class="photo photo-9 photo__awning" src="images/photos/awnings/awning-8.png"
+              alt="Awnings on the Minipod M300 Side View">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
