--- a/interview-next-steps.html
+++ b/interview-next-steps.html
@@ -42,6 +42,17 @@
 
   <title>Digital Shovel • Interview Next Steps</title>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-810441893"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-810441893');
+  </script>
+
+
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
     (function (h, o, t, j, a, r) {
@@ -218,7 +229,8 @@
     <section class="hero interview__hero flex flex-col">
       <div class="flex flex-col gap--sm">
         <h1 class="hero__heading hero__heading--left">CONGRATULATIONS!</h1>
-        <p class="hero__body">You have successfully passed your first interview! You are now eligible to move on to the second round,
+        <p class="hero__body">You have successfully passed your first interview! You are now eligible to move on to the
+          second round,
           evaluating your technical skills.
         </p>
       </div>
@@ -233,7 +245,7 @@
               <img src="images/photos/team/scot-extended.png" alt="Scot Johnson - CEO & President">
               <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
                 <h3>Scot Johnson</h3>
-                  <span class="label__pill">CEO & President</span>
+                <span class="label__pill">CEO & President</span>
               </div>
               <p>Scot Johnson is the CEO and President of Digital Shovel. He has over 10 years of experience as a
                 business owner, over 5 years in the technology sector and is passionate about innovation and efficiency
@@ -243,7 +255,7 @@
               <img src="images/photos/team/persia_v2.png" alt="Persia Khodarahmi - Operations Manager">
               <div class="flex flex-col--md-mobile jc-start ai-c gap--sm">
                 <h3>Persia Khodarahmi</h3>
-                  <span class="label__pill">Operations Manager</span>
+                <span class="label__pill">Operations Manager</span>
               </div>
               <p>Persia Khodarahmi is the Operations Manager at Digital Shovel. She is responsible for overseeing the
                 day-to-day operations and is passionate about delivering high-quality products and services to clients
