--- a/thanks.html
+++ b/thanks.html
@@ -54,6 +54,16 @@
     gtag('config', 'AW-810441893');
   </script>
 
+  <!-- Google tag thank you page (gtag.js) -->
+  <script>
+    window.addEventListener('load', function () {
+      if (document.location.href.includes('/thanks.html')) {
+        gtag('event', 'conversion', {
+          'send_to': 'AW-810441893/GcRtCI6v94UBEKW5uYID'
+        });
+      }
+    });
+  </script>
 
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
@@ -285,11 +295,12 @@
       <div class="footer__divider"></div>
       <div class="flex flex-col--lg-tablet jc-sb gap--sm">
         <div class="flex flex-col--lg-tablet gap--sm">
-          <small class="footer__copyright">© <span class="footer__copyright-year">2023</span> Digital Shovel Holdings Inc.</small>
+          <small class="footer__copyright">© <span class="footer__copyright-year">2023</span> Digital Shovel Holdings
+            Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
           <a target="_blank" href="https://www.youtube.com/@digital_shovel"><img class="footer__social"
-            src="images/icons/icon_youtube.svg" alt="YouTube Logo Icon"></a>
+              src="images/icons/icon_youtube.svg" alt="YouTube Logo Icon"></a>
           <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
               src="images/icons/icon_instagram.svg" alt="Instagram Logo Icon"></a>
           <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
