--- a/thanks.html
+++ b/thanks.html
@@ -54,7 +54,7 @@
     gtag('config', 'AW-810441893');
   </script>
 
-  <!-- Google tag thank you page (gtag.js) -->
+  <!-- Google tag - Thank You Page (gtag.js) -->
   <script>
     window.addEventListener('load', function () {
       if (document.location.href.includes('/thanks.html')) {
