--- a/spdu.html
+++ b/spdu.html
@@ -53,6 +53,15 @@
 
   <title>Digital Shovel • PDU</title>
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-810441893"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-810441893');
+  </script>
+
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
     (function (h, o, t, j, a, r) {
@@ -342,7 +351,8 @@
           <li class="card__list-item flex">96 – C19 outlets with a 20A dedicated breaker per outlet</li>
           <li class="card__list-item flex">Allows max wattage while providing max protection</li>
           <li class="card__list-item flex">Individual port monitoring and switching</li>
-          <li class="card__list-item flex">Fitted with a UL 489 Listed 350A 3 phase main breaker, tied to a common overhead mounted busway</li>
+          <li class="card__list-item flex">Fitted with a UL 489 Listed 350A 3 phase main breaker, tied to a common
+            overhead mounted busway</li>
         </ul>
       </div>
       <div class="card-2 card__data card__secondary flex ai-c gap--md">
@@ -371,7 +381,8 @@
           Include with your <span class="text--blue">SPDU</span>
         </h2>
         <div class="bundle__illustrations">
-          <img class="bundle__illustrations--spdu" src="images/photos/pdu/spdu_features.png" alt="Smart Power Distribution Unit Features">
+          <img class="bundle__illustrations--spdu" src="images/photos/pdu/spdu_features.png"
+            alt="Smart Power Distribution Unit Features">
         </div>
         <a href="contact" class="btn btn--primary mtop--2xl mbot--lg">Contact Sales
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -420,11 +431,12 @@
       <div class="footer__divider"></div>
       <div class="flex flex-col--lg-tablet jc-sb gap--sm">
         <div class="flex flex-col--lg-tablet gap--sm">
-          <small class="footer__copyright">© <span class="footer__copyright-year">2023</span> Digital Shovel Holdings Inc.</small>
+          <small class="footer__copyright">© <span class="footer__copyright-year">2023</span> Digital Shovel Holdings
+            Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
           <a target="_blank" href="https://www.youtube.com/@digital_shovel"><img class="footer__social"
-            src="images/icons/icon_youtube.svg" alt="YouTube Logo Icon"></a>
+              src="images/icons/icon_youtube.svg" alt="YouTube Logo Icon"></a>
           <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
               src="images/icons/icon_instagram.svg" alt="Instagram Logo Icon"></a>
           <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
