--- a/nanopod.html
+++ b/nanopod.html
@@ -205,7 +205,7 @@
                   <small>Cooling Solution</small>
                 </div>
               </a> -->
-              <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+              <!-- <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -220,7 +220,7 @@
                   </h5>
                   <small>Automation & Monitoring</small>
                 </div>
-              </a> -->
+              </a> --> -->
             </div>
           </div>
         </li>
@@ -444,7 +444,7 @@
             <li><a href="nanopod" class="footer__list-item">NanoPOD</a></li>
             <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
             <!-- <li><a href="fans" class="footer__list-item">Cooling Fans</a></li> -->
-            <!-- <li><a href="spdu" class="footer__list-item">SmartPDU</a></li> -->
+            <!-- <!-- <li><a href="spdu" class="footer__list-item">SmartPDU</a></li> --> -->
           </ul>
         </div>
         <div class="footer__column">
