--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.min.css?v=2.1.1">
+  <link rel="stylesheet" href="dist/style.min.css?v=2.1.2">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -204,7 +204,7 @@
                   <small>Cooling Solution</small>
                 </div>
               </a> -->
-              <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+              <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -219,7 +219,7 @@
                   </h5>
                   <small>Automation & Monitoring</small>
                 </div>
-              </a>
+              </a> -->
             </div>
           </div>
         </li>
@@ -438,7 +438,7 @@
       </svg>
     </a>
     
-    <section id="scroller" class="container scroller-container">
+    <!-- <section id="scroller" class="container scroller-container">
       <div class="flex flex-col ai-c">
         <h2 class="testimonials__subheading">As Seen On</h2>
         <h3 class="testimonials__heading">Media Outlets</h3>
@@ -457,7 +457,7 @@
           <img class="scroller__inner-item" src="images/press-logos/investors-observer.png" alt="Benzinga Logo">
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section id="bundle" class="bundle container">
       <div class="flex ai-c gap--md">
@@ -872,7 +872,8 @@
             <li><a href="nanopod" class="footer__list-item">NanoPOD</a></li>
             <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
             <!-- <li><a href="fans" class="footer__list-item">Cooling Fans</a></li> -->
-            <li><a href="spdu" class="footer__list-item">SmartPDU</a></li>
+            <!-- <li><a href="spdu" class="footer__list-item">SmartPDU</a></li> -->
+            
           </ul>
         </div>
         <div class="footer__column">
