--- a/press.html
+++ b/press.html
@@ -75,7 +75,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar--borderless">
+    <nav class="navbar">
       <div class="navbar__container">
         <a href="/" class="navbar__logo" aria-label="Digital Shovel Logo">
           <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
