--- a/awnings.html
+++ b/awnings.html
@@ -193,7 +193,7 @@
                   <small>Cooling Solution</small>
                 </div>
               </a> -->
-                <!-- <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+                <!--<a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -209,7 +209,6 @@
                   <small>Automation & Monitoring</small>
                 </div>
               </a> -->
-                -->
               </div>
             </div>
           </li>
