navbar link fix

--- a/bluAX.html
+++ b/bluAX.html
@@ -194,7 +194,7 @@
                   <small>Air-Intake Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="BluAX" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="bluax" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_bluax.svg" alt="BluAX Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -251,8 +251,8 @@
         <img src="images/illustrations/bluAX_logo_gray+blue.svg" alt="BluAX Logo">
       </div>
       <div class="flex flex-col--sm-tablet ai-c gap--lg">
-        <img class="hero__product-illustration hero__product-illustration--bluax"
-          src="images/illustrations/bluAX_flat.svg" alt="BluAX Front View Illustration" />
+        <img class="hero__product-illustration hero__product-illustration--bluax" src="images/illustrations/bluAX_flat.svg"
+          alt="BluAX Front View Illustration" />
         <div class="gallery-container">
           <div class="gallery gallery__col-1">
             <img class="photo photo-1 photo__i300" src="images/photos/bluax/bluax_front-view.jpg"
@@ -349,8 +349,8 @@
         <form action="https://formspree.io/f/mldnlqyq" method="POST" autocomplete="on" enctype="multipart/form-data">
           <div class="fieldset fieldset__3-col flex flex-col">
             <label class="fieldset__label" for="name">Name</label>
-            <input class="fieldset__text" aria-label="Enter your name" type="text" id="input-name" name="name"
-              placeholder="John Doe" autocomplete="on" required="required" />
+            <input class="fieldset__text" aria-label="Enter your name" type="text" id="input-name"
+              name="name" placeholder="John Doe" autocomplete="on" required="required" />
           </div>
           <div class="fieldset fieldset__3-col flex flex-col">
             <label class="fieldset__label" for="Email">Email</label>
@@ -364,8 +364,8 @@
           </div>
           <div class="fieldset fieldset__3-col flex flex-col">
             <label class="fieldset__label" for="learned-bluax-from">Where did you learn about BluAX?</label>
-            <select id="learned-bluax-from" name="learned-bluax-from"
-              aria-label="Select where did you learn about BluAX" class="fieldset__select" required="required">
+            <select id="learned-bluax-from" name="learned-bluax-from" aria-label="Select where did you learn about BluAX" class="fieldset__select"
+              required="required">
               <option value="">Select One</option>
               <optgroup label="Conferences">
                 <option value="BTC Prague">BTC Prague</option>
@@ -392,8 +392,7 @@
               placeholder="Tell us more about your project, business needs, and budget." required="required"></textarea>
           </div>
           <input type="hidden" name="_next" value="https://digitalshovel.com/thanks" />
-          <input aria-label="Submit Button" class="btn btn--primary btn--form" type="submit"
-            value="Register for BluAX News" />
+          <input aria-label="Submit Button" class="btn btn--primary btn--form" type="submit" value="Register for BluAX News"/>
         </form>
       </div>
     </section>
