--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -174,7 +174,7 @@
                   <small>Air-Intake Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="BluAX" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="bluax" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_bluax.svg" alt="BluAX Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
