added btc vegas and consensus, removed GES

--- a/bluAX.html
+++ b/bluAX.html
@@ -369,9 +369,10 @@
               <option value="">Select One</option>
               <optgroup label="Conferences">
                 <option value="BTC Prague">BTC Prague</option>
-                <option value="Mining Disrupt">Mining Disrupt</option>
+                <option value="BTC Vegas">BTC Vegas</option>
+                <option value="Consensus 2025">Consensus 2025</option>
                 <option value="Digital Shovel Fest">Digital Shovel Fest</option>
-                <option value="Global Energy Show">Global Energy Show</option>
+                <option value="Mining Disrupt">Mining Disrupt</option>
               </optgroup>
               <optgroup label="Social Media">
                 <option value="Instagram">Instagram</option>
