minor changes to nanopod specs + pricing

--- a/nanopod.html
+++ b/nanopod.html
@@ -322,8 +322,8 @@
             <h6>Power Input</h6>
           </div>
           <ul class="flex flex-col gap--md">
-            <li class="card__list-item flex">Single Phase 208v (NA & EU compatible)</li>
-            <li class="card__list-item flex">Three Phase 415-380v & 208v</li>
+            <li class="card__list-item flex">Single Phase 200-240v</li>
+            <li class="card__list-item flex">Three Phase 240-415v</li>
           </ul>
         </div>
         <div class="card-5 card__list flex flex-col gap--md">
@@ -380,8 +380,8 @@
       <div class="card-9 card__data flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
         <h6 class="text--dark-blue">Approx. Cost</h6>
-        <h6 class="text--blue text--strikethrough-small">$19,900</h6>
-        <h6 class="text--blue text--emphasis">$15,000</h6>
+        <h6 class="text--blue text--strikethrough-small">$29,900</h6>
+        <h6 class="text--blue text--emphasis">$24,900</h6>
       </div>
     </section>
     <section id="bundle" class="bundle">
