changed bluax href to BluAX

--- a/nanopod.html
+++ b/nanopod.html
@@ -190,7 +190,7 @@
                   <small>Air-Intake Solution</small>
                 </div>
               </a>
-              <a class="dropdown__menu-item dropdown__link" href="bluax" tabindex="-1" aria-role="menu-item">
+              <a class="dropdown__menu-item dropdown__link" href="BluAX" tabindex="-1" aria-role="menu-item">
                 <img class="icon--md" src="images/icons/icon_navbar_bluax.svg" alt="BluAX Icon" aria-hidden="true" />
                 <div class="dropdown__text">
                   <h5>
@@ -428,7 +428,7 @@
             <li><a href="i300" class="footer__list-item">i300 Minipod</a></li>
             <li><a href="nanopod" class="footer__list-item">NanoPOD</a></li>
             <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
-            <li><a href="bluAX" class="footer__list-item">BluAX Lottery Miner</a></li>
+            <li><a href="BluAX" class="footer__list-item">BluAX Lottery Miner</a></li>
           </ul>
         </div>
         <div class="footer__column">
