minor verbiage update

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
           <div class="app__text flex flex-col gap--lg">
             <div class="flex ai-c gap--sm">
               <img class="icon--md" src="images/icons/icon_filter.svg" alt="">
-              <h2 class="app__subheading">Fully Control & Automations</h2>
+              <h2 class="app__subheading">Fully Control & Automate</h2>
             </div>
             <h3 class="app__heading">Configure your Minipods with our smooth, easy-to-use, brand new UI.</h3>
             <p class="app__body--light">One of the greatest strengths of the Minipod is the <span
